<resources>
    <string name="app_name">DroidCafe</string>
    <string name="action_order">Order</string>
    <string name="action_status">Status</string>
    <string name="action_favorites">Favorites</string>
    <string name="action_contacts">Contact</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="intro_text">Droid Desserts</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="donuts">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_cream_sandwiches">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="froyo">FroYo is premium self-serve frozen yogurt.</string>

    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="enter_name_hint">Enter your name</string>
    <string name="enter_address_hint">Enter your address</string>
    <string name="enter_phone_hint">Enter your phone</string>
    <string name="enter_note_hint">Enter note</string>
    <string name="delivery_text">Choose a delivery method</string>
    <string name="same_day_messenger_service">Same day message service</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="pick_up">Pickup</string>
    <string name="action_order_message">Ordered</string>
    <string name="action_status_message">Status</string>
    <string name="action_favorites_message">Favorites</string>
    <string name="action_contact_message">Contact</string>

    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_select">SelectActivity</string>

    <string name="hello_first_fragment">Hello first fragment</string>
</resources>